# Psevdo_scp

./: README.md
Part1/: CMakeLists.txt  README.md  utils.cpp  utils.h  wavefindpath.cpp
Part1/graph/: graph0.scs  graph1.scs  graph2.scs  graph3.scs  graph4.scs
Part2/WaveFindPath_scp/: proc_add_edge_visit_to_route.scs  proc_add_vertex_visit_to_route.scs  proc_create_wave.scs  proc_erase_wave_list.scs  proc_find_any_edge.scs  proc_find_min_path.scs  proc_get_edge_vertexes.scs  proc_get_other_vertex_incidence_edge.scs  proc_get_route_struct.scs  proc_get_route_struct_begin.scs  proc_get_route_visit.scs  proc_print_graph.scs  proc_print_route.scs
Part2/WaveFindPath_scp/menu/: ui_main_menu.scs
Part2/WaveFindPath_scp/testInfo/: graph1.scs  graph2.scs  graph3.scs  graph4.scs  graph5.scs  keynodes.scs  proc_run_all_tests.scs  proc_run_testcase.scs
Part2/scp_examples/call_gen_erase/: prog11.scs
Part2/scp_examples/hello_world/: hello_world.scs
